[package]
name = "kinded_macros"
version = "0.4.0"
edition = "2024"
authors = ["Serhii Potapov <blake131313@gmail.com>"]

description = "Generate enums with same variants, but without data."
keywords = ["enum", "macros", "kind", "derive"]
license = "MIT"
repository = "https://github.com/greyblake/kinded"
homepage = "https://github.com/greyblake/kinded"
documentation = "https://docs.rs/kinded"
readme = "README.md"
categories = ["data-structures", "rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }

[lib]
proc-macro = true
